<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/anime_background"
    tools:context=".animiolknova.ui.activities.AniMiolkNovaDetalleActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ivBanner"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/content_description_media"


                    app:srcCompat="@drawable/ic_launcher_background" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/tvTituloAnime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        android:textAppearance="?attr/textAppearanceTitleMedium" />

                    <TextView
                        android:id="@+id/tvTextoSecundario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="sinopsis"
                        android:textAppearance="?attr/textAppearanceBodyMedium"
                        android:textColor="?android:attr/textColorSecondary" />

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="Score"
                        android:textAppearance="?attr/textAppearanceBodyMedium"
                        android:textColor="?android:attr/textColorSecondary" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        tools:layout_editor_absoluteY="64dp">

                        <TextView
                            android:id="@+id/tvSoporte"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="rating"
                            android:textAppearance="?attr/textAppearanceBodyLarge"
                            android:textColor="?android:attr/textColorSecondary" />

                        <RatingBar
                            android:id="@+id/rbPuntaje"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="10dp"
                            android:contentDescription="Enter How Much Cookies You Want"
                            android:isIndicator="true"
                            android:numStars="5"
                            android:stepSize="0.1" />
                    </LinearLayout>
                </LinearLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp" />

                <TextView
                    android:id="@+id/tvGenero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/genero" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvGenero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                </androidx.recyclerview.widget.RecyclerView>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                        android:id="@+id/btnBuscar"
                        style="@style/Widget.Material3.Button.ElevatedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|end"
                        android:layout_margin="16dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:contentDescription=""
                        android:text="@string/txt_btn_buscar"
                        app:icon="@drawable/search"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                        android:id="@+id/fbtnAgregar"
                        style="@style/Widget.Material3.Button.ElevatedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|end"
                        android:layout_margin="12dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:contentDescription="@string/description_button"
                        android:text="@string/description_btn_floating"
                        app:icon="@drawable/baseline_turned_in_not_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>